syntax = "proto3";

package userpb; // Ensure this matches the generated Go package name

option go_package = "./pb/user"; // Updated to match the generated Go package

service UserService {
    rpc RegisterUser(RegistrationRequest) returns (RegistrationResponse);
    rpc LoginUser(LoginRequest) returns (LoginResponse);
}

message RegistrationRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string name = 4;
    string address = 5;
    string profile_picture_url = 6;
    string role = 7;
    string account_category = 8;
}

message RegistrationResponse {
    string username = 1;
    string email = 2;
    string name = 3;
    string address = 4;
    string profile_picture_url = 5;
    string role = 6;
    string account_category = 7;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message Empty{
}