syntax = "proto3";

package user;
option go_package = "./proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc CreateMerchant (CreateMerchantRequest) returns (CreateMerchantResponse);
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string full_name = 5;
    string address = 6;
    string phone_number = 7;
    string photo = 8;
}

message CreateUserResponse {
    string id = 1;
}

message CreateMerchantRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string full_name = 5;
    string address = 6;
    string phone_number = 7;
    string photo = 8;
    string bank_account_name = 9;
    string bank_code = 10;
    string bank_account_number = 11;
}

message CreateMerchantResponse {
    string id = 1;
}